<resources>
    <string name="app_name">CarVerse</string>
    <string name="texto_bienvenida">Bienvenido!</string>
    <string name="login_usuario">Nombre de usuario</string>
    <string name="helper_login_usuario">Escribe un nombre de usuario</string>
    <string name="login_password">Contraseña</string>
    <string name="helper_login_password">Escribe tu contraseña</string>
    <string name="login_button">Acceder</string>
    <string name="pruebaTitular">Titular</string>
    <string name="pruebaPreview">Preview</string>
    <string name="image_description">Imagen de Portada</string>
    <string name="register_button">Registrarse</string>
    <string name="cb_recordar">Recuerdame</string>
    <string name="card_img_description">Fondo de la card</string>
    <string name="tv_ejemplo_card">Titulo de la card</string>
    <string name="categoria_jdm">1|JDM|https://i.ebayimg.com/images/g/EUkAAOSwi0xZ6PNj/s-l1200.jpg|La cultura JDM se centra en los vehículos de alto rendimiento y diseño innovador provenientes de Japón. Marcas como Nissan, Toyota, Honda y Subaru son las protagonistas de esta escena, con modelos legendarios como el Nissan Skyline GT-R y el Toyota Supra. La comunidad JDM valora la personalización, la fiabilidad y la agilidad en la carretera, además de una estética minimalista pero impactante.</string>
    <string name="categoria_euro">2|Euros|https://images.squarespace-cdn.com/content/v1/556917fce4b0599fc802928d/1526574641428-VM1SNCHS5H57MWHUHCZS/_DSC8680.jpg|La cultura Euro celebra la ingeniería de precisión y el lujo de los coches europeos. Marcas como BMW, Mercedes-Benz, Audi y Volkswagen han dado forma a esta tradición, combinando tecnología avanzada, rendimiento superior y un diseño elegante. Modelos icónicos como el BMW M3 o el Audi Quattro han dejado su huella en la historia, con los entusiastas de esta cultura apreciando la sofisticación y el refinamiento en cada detalle.</string>
    <string name="categoria_muscle">3|Muscle|https://www.dodge.com/content/dam/cross-regional/nafta/dodge/es_mx/Blog/2020/muscle-cars/que-es-un-muscle-car-y-cuales-son-sus-caracteristicas/desktop/dodge-noticias-que-es-un-muscle-car-y-cuales-son-sus-caracteristicas-cuerpo-1-dk.jpg.img.1440.jpg|Los coches Muscle son símbolos de poder y velocidad, nacidos en Estados Unidos en las décadas de 1960 y 1970. Con motores V8 potentes y diseños agresivos, modelos como el Ford Mustang, Chevrolet Camaro y Dodge Charger son los pilares de esta cultura. La pasión por la velocidad y la música de los motores rugiendo en las rectas largas es lo que define a los seguidores del Muscle, quienes buscan sensaciones intensas al volante.</string>
    <string name="categoria_exotic">4|Exotic|https://www.celebrationcarshow.com/wp-content/uploads/2023/11/Trio-showcase-slide.jpg|Los coches Exóticos representan el máximo lujo, exclusividad y rendimiento. Marcas como Ferrari, Lamborghini y McLaren han llevado el mundo del automóvil a nuevas alturas con modelos como el Ferrari F40 y el Lamborghini Aventador. Estos coches no solo son rápidos, sino que son verdaderas obras de arte sobre ruedas, diseñadas para atraer miradas y ofrecer una experiencia de conducción única en su clase.</string>
    <string name="jdm_nissan">1|1|Nissan|https://car-logos.net/wp-content/uploads/2023/03/nissan-logo-2020-present-1024x742.webp|Nissan es conocida por su innovación y rendimiento. Modelos como el Skyline GT-R y el 350Z destacan por su equilibrio entre potencia y estilo, conquistando tanto las calles como las pistas.</string>
    <string name="nissan_skyline_r34">1|1|Skyline GT–R (R34)|https://cdn.topgear.es/sites/navi.axelspringer.es/public/media/image/2023/05/nissan-skyline-gt-r-r34-fast-furious-3029216.jpg?tf=3840x|1999–2002</string>
    <string name="nissan_350z_370z">2|1|350Z|https://korncars.com/wp-content/uploads/2016/03/nissan-350-z-korncars-i.jpg?w=1140&amp;h=643&amp;crop=1|2002-presente</string>
    <string name="nissan_silvia">3|1|Silvia (S14)|https://cdn.dealeraccelerate.com/international/1/719/32617/1920x1440/1997-nissan-silvia|1988–2002</string>
    <string name="nissan_240sx">4|1|240SX|https://www.motorcarclassics.com/galleria_images/684/684_main_l.jpg|1989–1998</string>
    <string name="nissan_gtr_r35">5|1|GT-R (R35)|https://media.istockphoto.com/id/1474627763/es/foto/nissan-gtr.jpg?s=612x612&amp;w=0&amp;k=20&amp;c=4RxYcoePNaoNBk1kkNvyxMAWhbGwEsJJUBO0d59_RqA=|2007-presente</string>
    <string name="jdm_toyota">2|1|Toyota|https://media.toyota.com.ar/7d0bdc4d-fe3a-41b7-b75a-132af918f1fb.png|Toyota combina fiabilidad con rendimiento icónico. Desde el legendario Supra hasta los resistentes Land Cruiser, esta marca define versatilidad y emoción.</string>
    <string name="toyota_supra_a80">6|2|Supra (MK4 A80)|https://i.ytimg.com/vi/ydTumL8g_rY/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&amp;rs=AOn4CLBsBUsWe7rEJR_md3yBZ2Eu1UA7rw|1993–2002</string>
    <string name="toyota_ae86">7|2|AE86 (Corolla Trueno)|https://www.targasport.com.ar/wp-content/uploads/TargaSport-Toyota-AE86-Trueno-2.jpg|1983–1987</string>
    <string name="toyota_celica_gt4">8|2|Celica GT–Four|https://media.fastestlaps.com/toyota-celica-gt-four-st185-rc.jpg|1986–1999</string>
    <string name="toyota_mr2">9|2|MR2|https://espirituracer.com/archivos/2018/12/Toyota-MR2-W20.jpg|1984–2007</string>
    <string name="toyota_chaser">10|2|Chaser (JZX100)|https://preview.redd.it/ta4f1vtja7371.jpg?width=640&amp;crop=smart&amp;auto=webp&amp;s=a5a8b485fd61f52cfc63d0bfcbf113b01607a18e|1996–2001</string>
    <string name="jdm_honda">3|1|Honda|https://loodibee.com/wp-content/uploads/Honda-Logo.png|Honda es sinónimo de precisión japonesa. Modelos como el Civic Type R y el NSX representan un balance perfecto entre agilidad y potencia.</string>
    <string name="honda_civic_type_r">11|3|Civic Type R (EK9)|https://lapmeta.com/storage/vi-images/n85F2tWFE8.jpeg|1997-presente</string>
    <string name="honda_nsx">12|3|NSX (NA1)|https://www.super-hobby.es/zdjecia/5/4/9/3391_rd.jpg|1990–2005</string>
    <string name="honda_integra_type_r">13|3|Integra Type R (DC2)|https://cdn.autobild.es/sites/navi.axelspringer.es/public/media/image/2022/08/honda-acura-integra-type-r-2782041.jpg?tf=3840x|1995–2001</string>
    <string name="honda_s2000">14|3|S2000|https://cdn.motor1.com/images/mgl/mMPMyr/s3/honda-s2000r-by-evasive-motorsports.jpg|1999–2009</string>
    <string name="honda_crx">15|3|CR–X del Sol|https://clasicosyusados.weebly.com/uploads/2/7/0/6/27065335/3036175_orig.jpg|1983–1991</string>
    <string name="jdm_mazda">4|1|Mazda|https://upload.wikimedia.org/wikipedia/nah/b/b1/Mazda_logo.png|Mazda incorpora diseño y tecnología únicos, como el motor rotativo del RX-7. La filosofía "Jinba Ittai" refleja la unión perfecta entre coche y conductor.</string>
    <string name="mazda_rx7">16|4|RX–7 (FD3S)|https://mividallenadecoches.wordpress.com/wp-content/uploads/2024/06/mazda-rx-7-type-r-bathurst-r-2616033.webp?w=1038&amp;h=576&amp;crop=1|1992–2002</string>
    <string name="mazda_mx5">17|4|MX-5 Miata (NA)|https://www.diariomotor.com/imagenes/2020/09/mazda-mx-5-na-01-portada.jpg|1989-presente</string>
    <string name="mazda_rx8">18|4|RX–8|https://cdn.autobild.es/sites/navi.axelspringer.es/public/media/image/2018/07/mazda-rx-8_5.jpg?tf=3840x|2003–2012</string>
    <string name="mazda_m3_mps">19|4|Mazda3 MPS|https://a.ccdn.es/cnet/contents/media/mazda/mazda3/127299.jpg/900x505cut/|2007–2013</string>
    <string name="mazda_cosmo">20|4|Cosmo|https://cdn.motor1.com/images/mgl/P3WeL4/s1/mazda-cosmo-sport-serie-ii-1968---dinamica.webp|1967–1996</string>
    <string name="jdm_subaru">5|1|Subaru|https://pngimg.com/d/subaru_PNG11965.png|Subaru domina los terrenos difíciles con tracción integral AWD y modelos como el Impreza WRX STI, emblemáticos en rally y carretera.</string>
    <string name="subaru_impreza_wrx_sti">21|5|Impreza WRX STI (GC8)|https://hips.hearstapps.com/hmg-prod/images/subaru-wrx-sti-type-r-subasta-1640893491.jpg|1992-presente</string>
    <string name="subaru_legacy_gt_b">22|5|Legacy GT–B|https://i.ytimg.com/vi/HlK2k5mRO2g/maxresdefault.jpg|1996–2003</string>
    <string name="subaru_brz">23|5|BRZ|https://e.allegroimg.com/s512/03ef01/233e115e4356adb750c88dd9d8de/Silnik-Subaru-BRZ-Toyota-GT86-po-naprawie|2012-presente</string>
    <string name="subaru_forester_xt">24|5|Forester XT|https://images.squarespace-cdn.com/content/v1/5aac1f6a5cfd796d520a4a7a/1711652734008-KTNEOYZ9G695W2AHN8C2/IMG_4898.jpg?format=1000w|1997-presente</string>
    <string name="subaru_svx">25|5|SVX|https://preview.redd.it/1l4ywtjpkyk91.jpg?width=1080&amp;crop=smart&amp;auto=webp&amp;s=9d759231b7d250dfef579bedbceb0a986e8fd9ab|1991–1996</string>
    <string name="jdm_mitsubishi">6|1|Mitsubishi|https://upload.wikimedia.org/wikipedia/commons/thumb/5/5a/Mitsubishi_logo.svg/1200px-Mitsubishi_logo.svg.png|Mitsubishi, con el icónico Lancer Evolution, se ha establecido como líder en el mundo del rally y vehículos de alto rendimiento.</string>
    <string name="mitsubishi_lancer_evo">26|6|Lancer Evolution (Evo IX)|https://www.lapmeta.com/storage/vi-images/a0XGdgIvG5.jpeg|1992–2015</string>
    <string name="mitsubishi_3000gt">27|6|3000GT (GTO)|https://www.topgear.com/sites/default/files/2023/12/1999_Mitsubishi_3000GT.jpg|1990–2001</string>
    <string name="mitsubishi_eclipse">28|6|Eclipse (2G)|https://avcdn.av.by/cargeneration/0001/1464/9845.jpg|1995–1999</string>
    <string name="mitsubishi_starion">29|6|Starion|https://www.motortrend.com/files/6671c96e952e1c0008a712fe/005-1987-mitsubishi-starion-silver-front-three-quarter.jpg?w=768&amp;width=768&amp;q=75&amp;format=webp|1982–1989</string>
    <string name="mitsubishi_galant_vr4">30|6|Galant VR–4|https://jdmsupply.com/storage/images/vehicle/800/6kQ2TNQI3pJd5IJqorMj52xtXVOvnXIOYDYxatrL_1214x854.webp|1988–2002</string>
    <string name="euro_volkswagen">13|2|Volkswagen|https://uploads.vw-mms.de/system/production/images/vwn/030/144/images/6fa5f9117e680d48f54013112746a318e982207d/DB2019AL01949_web_1600.jpg?1649155356|Volkswagen es líder en diseño compacto y eficiente. Con el Golf GTI como bandera, combina versatilidad y deportividad.</string>
    <string name="volkswagen_golf_gti">46|13|Golf GTI (MK2)|https://www.norclassics.com/wp-content/uploads/2022/03/MG_3628.jpg|1976-presente</string>
    <string name="volkswagen_beetle">47|13|Beetle (Type 1)|https://live.staticflickr.com/936/41744902730_483135183e_b.jpg|1938–2003</string>
    <string name="volkswagen_scirocco">48|13|Scirocco|https://www.automoli.com/common/vehicles/_assets/img/gallery/f85/volkswagen-scirocco-53b.jpg|1974–1992</string>
    <string name="volkswagen_phaeton">49|13|Phaeton|https://cdn.autobild.es/sites/navi.axelspringer.es/public/media/image/2017/07/volkswagen-phaeton.jpg?tf=3840x|2001–2004</string>
    <string name="volkswagen_corrado_vr6">50|13|Corrado VR6|https://espirituracer.com/archivos/2018/09/Volkswagen-Corrado-VR6-1.jpg|1991–1995</string>
    <string name="euro_audi">14|2|Audi|https://e7.pngegg.com/pngimages/905/811/png-clipart-audi-logo-audi-logo-transport-cars.png|Audi, con su sistema Quattro y vehículos como el RS6 Avant, fusiona tecnología, diseño y dinamismo.</string>
    <string name="tv_fecha_modelo">fecha</string>
    <string name="titulo_ficha">Modelo</string>
    <string name="tv_anyos_ficha">Años de fabricación:</string>
    <string name="tv_potencia_ficha">Potencia:</string>
    <string name="tv_potencia_ejemplo">XXX CV</string>
    <string name="tv_velocidad_ficha">Velocidad máxima:</string>
    <string name="tv_velocidad_ejemplo">XXX km/h</string>
    <string name="tv_traccion_ficha">Tracción:</string>
    <string name="tv_traccion_ejemplo">XXXX</string>
    <string name="tv_precio_ficha">Precio:</string>
    <string name="tv_precio_ejemplo">XXX €</string>
    <string name="imgDescriptionFicha">Imagen de la ficha</string>
</resources>