<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/loginBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription=""
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_top_corners"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:elevation="@dimen/default_card_elevation"
        android:padding="@dimen/margin_min">

        <TextView
            android:id="@+id/tvBienvenida"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/ts_bienvenida"
            android:paddingTop="@dimen/margin_min"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/margin_min"
            app:layout_constraintBottom_toTopOf="@id/tilUsuario"
            android:text="@string/texto_bienvenida" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUsuario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_usuario"
            app:helperText="@string/helper_login_usuario"
            android:layout_marginBottom="@dimen/margin_min"
            app:layout_constraintStart_toStartOf="@id/tvBienvenida"
            app:layout_constraintEnd_toEndOf="@id/tvBienvenida"
            app:layout_constraintBottom_toTopOf="@id/tilPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@integer/max_length_username"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            app:helperText="@string/helper_login_password"
            app:layout_constraintStart_toStartOf="@id/tilUsuario"
            app:layout_constraintEnd_toEndOf="@id/tilUsuario"
            app:layout_constraintBottom_toTopOf="@id/cbRecordar"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/cbRecordar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_recordar"
            app:layout_constraintStart_toStartOf="@id/tilPassword"
            app:layout_constraintBottom_toTopOf="@id/loginBtn"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:layout_marginTop="@dimen/margin_min"
            app:layout_constraintStart_toStartOf="@id/tilPassword"
            app:layout_constraintEnd_toEndOf="@id/tilPassword"
            app:layout_constraintBottom_toTopOf="@id/registerBtn"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:cornerRadius="@dimen/btn_radius"
            android:text="@string/register_button"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="@id/loginBtn"
            app:layout_constraintEnd_toEndOf="@id/loginBtn"
            app:layout_constraintBottom_toBottomOf="parent"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>